--- a/index.html
+++ b/index.html
@@ -151,9 +151,13 @@
         <p>© 2025 My Portfolio</p>
     </footer>
     <script>
-        window.onload = function () {
-            // Scrolls to the bottom of the page when it loads
-            window.scrollTo(0, document.body.scrollHeight);
+        // window.onload = function () {
+        //     // Scrolls to the bottom of the page when it loads
+        //     window.scrollTo(0, document.body.scrollHeight);
+        // };
+
+ window.onload = function () {
+            window.scrollTo(0, 0);
         };
     </script>
     <script>
